--- a/src/main/resources/static/css/weatherStyle.css
+++ b/src/main/resources/static/css/weatherStyle.css
@@ -5,7 +5,7 @@
 label {margin-bottom: 0;}
 
 /* header */
-aside {width: 100%; min-width: 150px; max-width: 180px; height: calc(100vh - 80px); background: skyblue; border-right: 1px solid #ddd;}
+aside {width: 100%; min-width: 150px; max-width: 180px; min-height: calc(100vh - 80px); background: skyblue; border-right: 1px solid #ddd;}
 aside .logo {display: block; text-align: center; background: #fff;}
 aside .logo > img {max-width: 100px;}
 aside .menu .nav .nav-item .nav-link {font-size: 18px; font-weight: bold; color: #fff;}
