--- a/src/main/resources/static/css/booking.css
+++ b/src/main/resources/static/css/booking.css
@@ -2,16 +2,26 @@
 
 /* reset */
 a {text-decoration: none !important;}
+label {margin-bottom: 0 !important;}
 
 #wrap {}
 
 /* header */
 #header {}
 #header > h1 {margin-bottom: 0; text-align: center;}
-#header > h1 > a {display: block; color: #000;}
-#header > .nav {background: orange;}
+#header > h1 > a {display: block; color: #000; font-weight: bold;}
+#header > .nav {background: peru;}
 #header > .nav .nav-link {color: #fff; font-weight: bold;}
 
 /* footer */
-#footer {}
-#footer address {margin-bottom: 0;}
+#footer {background: #fefefe;}
+#footer address {margin-bottom: 0; border-top: 1px solid #ddd;}
+
+/* contents */
+.banner-image-area > img {max-width: 100%; object-fit: cover;}
+.booking-confirm-area .left-area {background: burlywood; font-size: 45px; line-height: 1.2; color: #fff;}
+.booking-confirm-area .confirm-area {background: papayawhip;}
+.booking-confirm-area .confirm-area label {width: 100px; font-size: 14px; font-weight: bold;}
+.booking-confirm-area .right-area {background: burlywood; font-size: 35px; line-height: 1.2; color: #fff;}
+
+.form-outer {margin: 0 auto;}
